--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
 .container {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  position: absolute;
+}
+.sidebar {
+  order: 1;
+  overflow: hidden;
+}
+.stream {
+  order: 2;
+  border: 2px red solid;
 }
