--- a/src/components/HomeStream/components/postinput.css
+++ b/src/components/HomeStream/components/postinput.css
@@ -58,3 +58,42 @@
 .text-area:focus {
   outline: none;
 }
+.post-input div.action-buttons{
+  margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.action-buttons .icon-buttons{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+}
+.action-buttons .tweet-button{
+  width: 20%;
+}
+.action-buttons .tweet-button button{
+   cursor: pointer;
+  background-color: rgb(23, 191, 99);
+  box-shadow: none;
+  border:none;
+  width: 90%;
+  padding: 8px;
+  color: white;
+  font-size: 15px;
+  font-weight: 700;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  border-radius: 2rem;
+  text-align: center;
+}
+.action-buttons .icon-buttons div{
+  padding: 5px;
+  margin-right: 5px;
+  display: flex;
+  justify-content: center;
+}
+.action-buttons .icon-buttons div:hover{
+  background-color: #e7f8ef;
+  border-radius: 20px;
+}
